--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "swr": "^1.2.1",
     "typescript": "^4.6.2",
@@ -20,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:css": "tailwindcss -o src/tailwindcss.css --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
   }
 }
